--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,10 @@ target/
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-/data/
+/data/*
+!/data/raw
+/data/raw/*
+!/data/raw/samples
 
 # Mac OS-specific storage files
 .DS_Store
