--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,62 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
-
-
-# backwards compatibility
-pathlib2
+absl-py==0.6.1
+alabaster==0.7.12
+astor==0.7.1
+awscli==1.16.73
+Babel==2.6.0
+botocore==1.12.63
+certifi==2018.11.29
+chardet==3.0.4
+Click==7.0
+colorama==0.3.9
+coverage==4.5.2
+cycler==0.10.0
+dlib==19.16.0
+docutils==0.14
+flake8==3.6.0
+gast==0.2.0
+grpcio==1.17.1
+h5py==2.8.0
+idna==2.8
+imagesize==1.1.0
+imutils==0.5.2
+Jinja2==2.10
+jmespath==0.9.3
+Keras==2.2.4
+Keras-Applications==1.0.6
+Keras-Preprocessing==1.0.5
+kiwisolver==1.0.1
+Markdown==3.0.1
+MarkupSafe==1.1.0
+matplotlib==3.0.2
+mccabe==0.6.1
+numpy==1.15.4
+opencv-python==3.4.4.19
+packaging==18.0
+parmap==1.5.1
+pathlib2==2.3.3
+Pillow==5.3.0
+protobuf==3.6.1
+pyasn1==0.4.4
+pycodestyle==2.4.0
+pydot==1.4.1
+pyflakes==2.0.0
+Pygments==2.3.0
+pyparsing==2.3.0
+python-dateutil==2.7.5
+python-dotenv==0.10.0
+pytz==2018.7
+PyYAML==3.13
+requests==2.21.0
+rsa==3.4.2
+s3transfer==0.1.13
+scipy==1.2.0
+six==1.12.0
+snowballstemmer==1.2.1
+Sphinx==1.8.2
+sphinxcontrib-websupport==1.1.0
+tensorboard==1.12.1
+tensorflow-gpu==1.12.0
+termcolor==1.1.0
+tqdm==4.28.1
+urllib3==1.24.1
+Werkzeug==0.14.1
