--- a/.gitignore
+++ b/.gitignore
@@ -76,10 +76,7 @@ target/
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-/data/*
-!/data/raw
-/data/raw/*
-!/data/raw/samples
+#/data/
 
 # Mac OS-specific storage files
 .DS_Store
